<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
         <View
        android:
        android:layout_width="10dp"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/menu_mylocation" />
    -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/menu_favorites_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:hint="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:textSize="22sp" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/menu_favorites_decor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="2"
                android:background="@color/menu_lines" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="9" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="2"
                android:background="@color/menu_stations" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_favorites_decor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/menu_favorites_decor1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/menu_favorites_button_lines"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center"
                    android:text="@string/lines_caps"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/menu_favorites_button_mylocation"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center"
                    android:text="@string/near_caps"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/menu_favorites_button_search"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center"
                    android:text="@string/stations_caps"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_favorites_decor3"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/menu_favorites_button_preferences"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center"
                    android:text="@string/settings_caps"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/menu_favorites_button_favorites"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center"
                    android:text="@string/favorites_caps"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/menu_favorites_button_ZETweb"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center"
                    android:text="@string/zetweb_caps"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_favorites_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="10dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/menu_favorites" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/menu_favorites" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ListView
                android:id="@+id/menu_favorites_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:divider="@drawable/simple_divider"
                android:dividerHeight="1px" >
            </ListView>

            <TextView
                android:id="@+id/menu_favorites_list_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_favorites"
                android:textSize="30sp"
                android:textStyle="normal"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>