<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".StationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView_box1"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/station_thumbnail"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="#0099CC" >

                <TextView
                    android:id="@+id/station_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textScaleX="0.8"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/station_star_box"
                android:layout_toRightOf="@id/station_thumbnail"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/station_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_station_name"
                    android:textColor="#333333"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/station_refresh_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:gravity="right"
                android:text="@string/loading"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@id/station_star_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="12dp" >

                <ImageView
                    android:id="@+id/station_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@android:drawable/star_big_off"
                    android:contentDescription="@string/content_description" />
            </RelativeLayout>
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SlidingStationActivity" >

            <android.support.v4.view.PagerTitleStrip
                android:id="@+id/station_pager_title_strip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#FF8800"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:textColor="#fff" />
        </android.support.v4.view.ViewPager>
    </LinearLayout>

    <LinearLayout
        android:id="@id/adView_box1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1209386500316296/3539366760" >
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>